--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ apps/static/assets/yarn.lock
 apps/static/assets/.temp
 
 aicolearning/db.sqlite3
+aicolearning/db.sqlite3
+aicolearning/db.sqlite3
